syntax = "proto3";

option go_package = "github.com/stepundel1/E-commerce/Users/internal/transport/grpc";
option java_multiple_files = true;
option java_package = "io.grpc.examples.userservice";
option java_outer_classname = "UserServiceProto";

package proto;

service Greeter {
    rpc RegisterUser (RegisterUserRequest) returns (RegisterUserResponse) {}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {}
}

message RegisterUserRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message RegisterUserResponse {
    bool success = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    bool success = 1;
}
